[B]v1.0.3[/B] (April 2013) :
  - fixed a bug with the channels from Germany
  - added new channels (7 channels)
        ZDF
        RTL NITRO
        SAT1 GOLD
        WDR
        MDR
        SWR
        N24

[B]v1.0.2[/B] (February 2013) :
  - improved EPG support and EPG layout
  - removed some non-working channels (11 channels)
        ZDF
        RTLNITRO
        MTV
        WDR
        MDR
        SWR
        N24
        SERVUSTV
        SINFO
        TELEZURI
        3PLUS
  - improved layout (channel selection by country)
  - added new channels (36 channels)
        EURONEWS GERMAN
        FRANCE24 FRENCH
        EURONEWS FRENCH
        RTL TELE LETZEBUERG
        RTP1
        RTP2
        SIC NOTICIAS
        SIC MULHER
        SIC RADICAL
        TVI FICCAO
        BENFICA TV
        PORTO CANAL
        DISNEY CHANNEL
        CANAL HOLLYWOOD
        AXN
        AXN BLACK
        AXN WHITE
        SYFY
        FOX
        FOX CRIME
        FOX MOVIES
        MTV PORTUGAL
        VH1
        DISCOVERY CHANNEL
        HISTORIA
        NATIONAL GEOGRAPHIC
        EURONEWS PORTUGUESE
        SPORT TV 1
        SPORT TV 4
        ALJAZEERA
        BBC WORLD NEWS
        BLOOMBERG
        CNN INTERNATIONAL
        CNBC EUROPE
        EURONEWS ENGLISH
        FRANCE24 ENGLISH

[B]v1.0.1[/B] (February 2013) :
  - added EPG support for the 40 channels

[B]v1.0.0[/B] (February 2013) :
  - initial release (40 channels)
        ARD
        ZDF
        SAT1
        RTL
        RTL2
        PRO7
        KABEL1
        VOX
        SIXX
        DMAX
        SUPERRTL
        RTLNITRO
        3SAT
        EUROSPORT
        SPORT1
        NICKCC
        KIKA
        ARTE
        VIVA
        MTV
        DELUXEMUSIC
        WDR
        MDR
        SWR
        N24
        NTV
        ZDFNEO
        SERVUSTV
        ORF1
        ORF2
        SF1
        SF2
        SFINFO
        TELEZURI
        3PLUS
        RTSUN
        RTSDEUX
        FRANCE2
        FRANCE3
        FRANCE5