@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<strings>
+   <string id="32001">Enable EPG support</string>
+   <string id="32002">Maximum number of videoplay attempts</string>
+</strings>
